# template-agent

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SERVICE_README.md  main.py  pyproject.toml  quick_start.sh  requirements.txt  requirements_service.txt  run_service.py  test
app/: __init__.py  config.py  converter.py  llm.py  llm_logger.py  logger.py  report_generator.py  type.py
app/agent/: __init__.py  base.py  merge_agent.py  report_multi.py  report_single.py  section_agent.py  section_agent_react.py  task_types.py  toolcall.py
app/prompt/: report_multi.py  report_single.py  section_agent.py  toolcall.py
app/service/: __init__.py  api.py  cli.py  models.py  report_service.py  streaming_executors.py
app/template/: __init__.py  converters.py  document_scheduler.py  document_types.py  task_executors.py  task_models.py  task_scheduler.py
app/tool/: __init__.py  create_chat_completion.py  knowledge_retrieval.py  terminate.py  tool_collection.py
docs/: converter_tutorial.md  demo.md  merge_agent_tutorial.md  section_agent_tutorial.md
examples/: task_scheduler_example.py  workflow.md
static/: dashboard.html
workdir/: llm_response.json
workdir/chroma_db/: chroma.sqlite3
workdir/documents/: 会议准备材料_20250729.md  会议对话记录_产品需求评审_20250729.md  技术调研_数据上传优化_20250728.md
workdir/documents/finance/: 企业A信贷评估报告.md
workdir/documents/test1/: PRD_智能鞋垫V1.2_20250726.md  (+2 more)
workdir/output/: report.json  report.md  test_report_new.json  test_report_new.md
workdir/template/: 产品需求评审会议.json  产品需求评审会议.md  企业信贷评估模板.md  企业信贷评估模版.md  头脑风暴会议模板.md  常规团队例会模板.md
