[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template-agent"
version = "0.1.0"
description = "基于模板和知识库的智能报告生成系统"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Template Agent Team"}
]
keywords = ["agent", "template", "report", "generation", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "loguru>=0.7.3",
    "openai>=1.99.1",
    "pydantic>2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "tenacity>=9.1.2",
    "tiktoken>=0.10.0",
]

[project.scripts]
template-agent = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/template-agent"
Repository = "https://github.com/yourusername/template-agent"
Issues = "https://github.com/yourusername/template-agent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
